tests/snapshots/run_wpt_conformance__onnx_notEqual_float16_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "not_equal.https.any.js",
    "notEqual float16 5D inputs with alternating broadcast axes",
    "onnx",
    "PASS",
)
