tests/snapshots/run_wpt_conformance__onnx_notEqual_float16_5D_tensor_and_broadcastable_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "not_equal.https.any.js",
    "notEqual float16 5D tensor and broadcastable 0D scalar",
    "onnx",
    "PASS",
)
